# ratatui-statusbar

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: demo.rs
src/: lib.rs
